k8s/go-linko.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-linko
spec:
  replicas: 1
  selector:
    matchLabels:
      app: go-linko
  template:
    metadata:
      labels:
        app: go-linko
    spec:
      containers:
        - name: go-linko
          image: "hbrawnak/go-linko:1.0.0"
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 8080
---

apiVersion: v1
kind: Service
metadata:
  name: go-linko
spec:
  selector:
    app: go-linko
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: main-port
