k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-linko-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
    - host: go-linko.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: go-linko
                port:
                  number: 8080
